minikube deployment/person-deployment/Новая папка/service — копия.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    service: my-app-service   
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http-my-app
