minikube deployment/person-deployment/Новая папка/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.auth.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth.auth.svc.cluster.local:9000/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-UserId"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /persons
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 8000
